# farreach-public

./: .gitignore  .gitmodules  README.md  README_for_Bmv2.md  README_for_DistReach.md  ae_instructions.md  benchmark.md  checkdiff.sh  cloc.sh  controlplane_cloc.sh  evaluation-progress.md  ovs-xindex-R.md  replace.sh  result.md  rmhistory.sh  sync.sh  sync.sh.bak  tech_report.md  tldk_fix.sh  tmp.sh  tofino-netbuffer-dpdk.md  tofino-netbuffer.md  tofino-xindex-R.md  tofino-xindex-dpdk.md  total_cloc.sh  update_public_repo.sh  update_publich_repo.sh  ycsb-implementation.md
BackupOverhead/: LoadStatistics.java  compile.sh  run.sh
benchmark/: syncfiles_fromdl1.sh  syncfiles_fromlocal.sh
benchmarkdist/: .gitignore  syncfiles_fromdl1.sh  syncfiles_fromlocal.sh
common/: Makefile  crc32.c  crc32.h  deleted_set_impl.h  dynamic_array.c  dynamic_rulemap.c  dynamic_rulemap.h  helper.h  io_helper.c  io_helper.h  key.c  key.h  latency_helper.c  packet_format.h  packet_format_impl.h  pkt_ring_buffer.c  pkt_ring_buffer.h  rocksdb_wrapper.c  rocksdb_wrapper.h  socket_helper.c  socket_helper.h  val.c  val.h
debug/: recieve.py  send.py  socketrecv.py  socketsend.py
distcache/: Makefile  addmit_1.c  backup_data.h  common_impl.h  compile.sh  config.ini  configure_server.sh  control_type.ini  controller.c  deleted_set_impl.h  dynamic_rulemap.c  evict_1.c  fake_cachepop_client.py  helper.h  packet_format.h  packet_format_impl.h  prepare.c  reflector.c  reflector_impl.h  remote_client.c  reset_rocksdb_affinity.sh  rocksdb_wrapper.c  rocksdb_wrapper.h  server.c  server_impl.h  socket_helper.c  socket_helper.h  socktest_client.c  start.sh  startserver.sh  switchos.c  switchos.c.bak  sync_file.sh  test_server_rotation.sh  test_server_rotation_dl13dl16.sh  test_server_rotation_dl15dl16.sh  test_server_rotation_dl16dl15.sh  warmup_client.c
distfarreach/: Makefile  bf_impl.h  blockinfo.h  common_impl.h  config.ini  configure_client.sh  configure_server.sh  controller.c  deleted_set.h  deleted_set_impl.h  dpdk_helper.c  dpdk_helper.h  gen_logical_idxes.py  helper.h  io_helper.c  key.c  loader.c  localtest.c  packet_format.h  packet_format_impl.h  reflector.c  reflector_impl.h  remote_client.c  rocksdb_wrapper.c  server.c  server_impl.h  socket_helper.c  socket_helper.h  stop_client.sh  switchos.c  switchos.c.bak  sync_file.sh  test_server_rotation.sh  test_server_rotation_dl13dl16.sh  test_server_rotation_dl15dl16.sh  val.c  warmup_client.c
distfarreachlimit/: Makefile  bpf.asm  config.ini  dpdk_helper.c  dynamic_array.h  io_helper.c  loader.c  packet_format.h  preparefinish_client.c  reflector.c  remote_client.c  rocksdb_wrapper.c  server_impl.h  switchos.c  switchos.c.bak  sync_file.sh  warmup_client.c
distnocache/: .gitignore  Makefile  bf.h  common_impl.h  config.ini  config.ini.bak  control_type.ini  key.c  loader.c  localtest.c  packet_format.h  packet_format_impl.h  pkt_ring_buffer.c  pkt_ring_buffer.h  remote_client.c  rocksdb_wrapper.c  server.c  server_impl.h  skewness_check.c  socket_helper.c  socket_helper.h  startserver.sh  stop_server.sh  sync_file.sh  test_server_rotation.sh  test_server_rotation_dl13dl16.sh  test_server_rotation_dl15dl16.sh  test_server_rotation_dl16dl15.sh  varkey.c  varkey.h
distreach/: .gitignore  1  1.c  Makefile  common_impl.h  compile.sh  config.ini  config.ini.bak  controller.c  design.md  fake_cachepop_client.py  faketest.py  localtest.c.bak  outband_packet_format.c  outband_packet_format.h  preparefinish_client.c  recover  recover.c  recover_exp.py  recover_tofino.c  reflector_impl.h  reset_all_affinity.sh  reset_rocksdb_affinity.sh  server.c  server_impl.h  simu_failure.c  simu_recover_load_persist.c  simu_recover_prepare.c  simu_recover_switch.c  start.sh  startserver.sh  switchos.c
docs/: bottleneck-find-process-220618.md  deprecated_result.md  distcache.md  distfarreach.md  distfarreachlimit.md  distnocache.md  issues_after_design_draft.md  netcache.md  netreach-v4-lsm.md  netreach-v4-xindex.md  netreach-v4.md  netreach-voting-optimized-dpeviction.md  netreach-voting-v2.md  netreach-voting-v3-memory.md  netreach-voting-v3.md  netreach-voting.md  netreach.md  nocache.md  result.md  run.md  tech_report.md  tofino-netbuffer-dpdk-lsm-varkv.md  tofino-netbuffer-dpdk-lsm.md  tofino-xindex-dpdk-lsm-varkv.md  tofino-xindex-dpdk-lsm.md  tofino-xindex-dpdk-memory-varkv.md  tofino-xindex-dpdk.md  varkey.md  varkv.md  varvalue.md  ycsb-implementation.md
farreach/: .gitignore  LICENCE  Makefile  README.md  backup_data.c  backup_data.h  bf.h  bf_impl.h  blockinfo.h  cbf.h  cbf_impl.h  checkdiff.sh  checksum_helper.c  checksum_helper.h  common_impl.h  concurrent_map.h  concurrent_map_impl.h  concurrent_set.h  concurrent_set_impl.h  concurrent_val.h  (+56 more)
ovs-xindex-R/: .gitignore  CMakeLists.txt  client.cpp  kill_network.sh  packet_format.h  packet_format_impl.h  prepare.cpp  server.cpp
tofino-xindex-dpdk/: .gitignore  CMakeLists.txt  Makefile  client.c  client.cfg  client.cpp  dpdk_helper.c  dpdk_helper.cpp  dpdk_helper.h  helper.h  localtest.c  prepare.c  server.c
tofino-xindex-dpdk/tofino/: table_configure.py
(+3337 files in other folders)
